get required parameters from api, set up map

--- a/Rhodium/app/src/main/res/values/strings.xml
+++ b/Rhodium/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="tac">Tac:</string>
     <string name="rac">Rac:</string>
     <string name="plmn">PLMN:</string>
+    <string name="arfcn">ARFCN:</string>
 </resources>
