add variables to cell info

--- a/Thorium/app/src/main/res/values/strings.xml
+++ b/Thorium/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="cell_identity">Cell Identity:</string>
     <string name="lte_rxlev">LTE RxLev:</string>
     <string name="lte_rssi">LTE RSSI:</string>
+    <string name="jitter">Jitter:</string>
 </resources>
